crates/pcb-zen-core/tests/snapshots/net__net_symbol_from_library.snap
---
source: crates/pcb-zen-core/tests/net.rs
expression: output
---
Data net: Net { name: "DATA", id: "<ID>", properties: {"__symbol_value": Value("(symbol\n  \"NB3N551DG\"\n  (exclude_from_sim no)\n  (in_bom yes)\n  (on_board yes)\n  (property\n    \"Reference\"\n    \"U\"\n    (at 0 8.89 0)\n    (effects\n      (font (size 1.27 1.27))\n    )\n  )\n  (property\n    \"Value\"\n    \"NB3N551DG\"\n    (at 0 -8.89 0)\n    (effects\n      (font (size 1.27 1.27))\n    )\n  )\n  (property\n    \"Footprint\"\n    \"C146731:SOIC-8_L4.9-W3.9-P1.27-LS6.0-BL\"\n    (at 0 -11.43 0)\n    (effects\n      (font (size 1.27 1.27))\n      (hide yes)\n    )\n  )\n  (property\n    \"Datasheet\"\n    \"https://lcsc.com/product-detail/Logic-ICs_ON_NB3N551DG_NB3N551DG_C146731.html\"\n    (at 0 -13.97 0)\n    (effects\n      (font (size 1.27 1.27))\n      (hide yes)\n    )\n  )\n  (property\n    \"Description\"\n    \"\"\n    (at 0 0 0)\n    (effects\n      (font (size 1.27 1.27))\n      (hide yes)\n    )\n  )\n  (property\n    \"LCSC Part\"\n    \"C146731\"\n    (at 0 -16.51 0)\n    (effects\n      (font (size 1.27 1.27))\n      (hide yes)\n    )\n  )\n  (symbol\n    \"NB3N551DG_0_1\"\n    (rectangle\n      (start\n        -7.62\n        6.86\n      )\n      (end\n        7.62\n        -6.86\n      )\n      (stroke\n        (width 0)\n        (type default)\n      )\n      (fill\n        (type background)\n      )\n    )\n    (circle\n      (center\n        -6.35\n        5.59\n      )\n      (radius 0.38)\n      (stroke\n        (width 0)\n        (type default)\n      )\n      (fill\n        (type none)\n      )\n    )\n    (circle\n      (center\n        -6.35\n        5.59\n      )\n      (radius 0.38)\n      (stroke\n        (width 0)\n        (type default)\n      )\n      (fill\n        (type none)\n      )\n    )\n    (pin\n      unspecified\n      line\n      (at -10.16 3.81 0)\n      (length 2.54)\n      (name\n        \"ICLK\"\n        (effects\n          (font (size 1.27 1.27))\n        )\n      )\n      (number\n        \"1\"\n        (effects\n          (font (size 1.27 1.27))\n        )\n      )\n    )\n    (pin\n      unspecified\n      line\n      (at -10.16 1.27 0)\n      (length 2.54)\n      (name\n        \"Q1\"\n        (effects\n          (font (size 1.27 1.27))\n        )\n      )\n      (number\n        \"2\"\n        (effects\n          (font (size 1.27 1.27))\n        )\n      )\n    )\n    (pin\n      unspecified\n      line\n      (at -10.16 -1.27 0)\n      (length 2.54)\n      (name\n        \"Q2\"\n        (effects\n          (font (size 1.27 1.27))\n        )\n      )\n      (number\n        \"3\"\n        (effects\n          (font (size 1.27 1.27))\n        )\n      )\n    )\n    (pin\n      unspecified\n      line\n      (at -10.16 -3.81 0)\n      (length 2.54)\n      (name\n        \"Q3\"\n        (effects\n          (font (size 1.27 1.27))\n        )\n      )\n      (number\n        \"4\"\n        (effects\n          (font (size 1.27 1.27))\n        )\n      )\n    )\n    (pin\n      unspecified\n      line\n      (at 10.16 3.81 180)\n      (length 2.54)\n      (name\n        \"OE\"\n        (effects\n          (font (size 1.27 1.27))\n        )\n      )\n      (number\n        \"8\"\n        (effects\n          (font (size 1.27 1.27))\n        )\n      )\n    )\n    (pin\n      unspecified\n      line\n      (at 10.16 1.27 180)\n      (length 2.54)\n      (name\n        \"VDD\"\n        (effects\n          (font (size 1.27 1.27))\n        )\n      )\n      (number\n        \"7\"\n        (effects\n          (font (size 1.27 1.27))\n        )\n      )\n    )\n    (pin\n      unspecified\n      line\n      (at 10.16 -1.27 180)\n      (length 2.54)\n      (name\n        \"GND\"\n        (effects\n          (font (size 1.27 1.27))\n        )\n      )\n      (number\n        \"6\"\n        (effects\n          (font (size 1.27 1.27))\n        )\n      )\n    )\n    (pin\n      unspecified\n      line\n      (at 10.16 -3.81 180)\n      (length 2.54)\n      (name\n        \"Q4\"\n        (effects\n          (font (size 1.27 1.27))\n        )\n      )\n      (number\n        \"5\"\n        (effects\n          (font (size 1.27 1.27))\n        )\n      )\n    )\n  )\n  (embedded_fonts no)\n)"), "symbol_name": Value("NB3N551DG"), "symbol_path": Value("/C146731.kicad_sym")}, symbol: Value(Symbol { name: Some("NB3N551DG"), pins: {"1": "ICLK", "2": "Q1", "3": "Q2", "4": "Q3", "5": "Q4", "6": "GND", "7": "VDD", "8": "OE"}, properties: {"Datasheet": "https://lcsc.com/product-detail/Logic-ICs_ON_NB3N551DG_NB3N551DG_C146731.html", "Description": "", "Footprint": "C146731:SOIC-8_L4.9-W3.9-P1.27-LS6.0-BL", "LCSC Part": "C146731", "Reference": "U", "Value": "NB3N551DG"} }) }
Module {
    name: "<root>",
    source: "test.zen",
}
[]
