crates/pcb-zen-core/tests/snapshots/net__net_type_cast_preserves_name_across_modules.snap
---
source: crates/pcb-zen-core/tests/net.rs
assertion_line: 286
expression: output
---
Created Power: 3V3
Created Ground: GND
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
    },
    child: Module {
        path: child,
        source: "/child.zen",
    },
    child.R1: Module {
        path: child.R1,
        source: "/component.zen",
        children: [
            FrozenValue(
                Component {
                    name: "R",
                    type: "resistor",
                    footprint: "package://stdlib/kicad-footprints/Resistor_SMD.pretty/R_0402_1005Metric.kicad_mod",
                    prefix: "R",
                    connections: {
                        "P1": FrozenValue(
                            Net {
                                name: "3V3",
                                id: "<ID>",
                            },
                        ),
                        "P2": FrozenValue(
                            Net {
                                name: "GND",
                                id: "<ID>",
                            },
                        ),
                    },
                    properties: {
                        "value": FrozenValue(
                            "10kOhm",
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: None,
                            pins: {
                                "1": "P1",
                                "2": "P2",
                            },
                        },
                    ),
                },
            ),
        ],
    },
}
[]
