crates/pcb-zen-core/tests/snapshots/net__net_with_symbol.snap
---
source: crates/pcb-zen-core/tests/net.rs
expression: output
---
Power net: Net(name: "POWER", id: <ID>)
Module {
    name: "<root>",
    source: "test.zen",
}
[]
