crates/pcb-zen-core/tests/snapshots/net__net_without_symbol.snap
---
source: crates/pcb-zen-core/tests/net.rs
assertion_line: 22
expression: output
---
Ground net: GND
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
    },
}
[]
