crates/pcb-zen-core/tests/snapshots/net__not_connected_promotes_to_custom_type.snap
---
source: crates/pcb-zen-core/tests/net.rs
assertion_line: 500
expression: output
---
NotConnected promotes to Gpio: success
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
    },
    child: Module {
        path: child,
        source: "/child.zen",
        children: [
            FrozenValue(
                Component {
                    name: "R1",
                    footprint: "package://stdlib/kicad-footprints/Resistor_SMD.pretty/R_0402_1005Metric.kicad_mod",
                    prefix: "U",
                    connections: {
                        "1": FrozenValue(
                            Net {
                                name: "",
                                id: "<ID>",
                            },
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: None,
                            pins: {
                                "1": "1",
                            },
                        },
                    ),
                },
            ),
        ],
    },
}
[]
