crates/pcb-zen-core/tests/snapshots/net__power_ground_have_default_symbols.snap
---
source: crates/pcb-zen-core/tests/net.rs
expression: output
---
Power net: VCC
Power symbol: Symbol { name: "VCC", pins: { "1": "VCC" } }
Ground net: GND
Ground symbol: Symbol { name: "GND", pins: { "1": "GND" } }
Signal net: SIGNAL
Control net: CONTROL
Clock net: CLOCK
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
    },
}
[]
