crates/pcb-zen-core/tests/snapshots/net__stdlib_power_ground_have_default_symbols.snap
---
source: crates/pcb-zen-core/tests/net.rs
expression: output
---
Power net: Power(name: "VCC", id: <ID>)
Power symbol: Symbol { name: "VCC", pins: { "1": "VCC" } }
Ground net: Ground(name: "GND", id: <ID>)
Ground symbol: Symbol { name: "GND", pins: { "1": "GND" } }
Analog net: ANALOG
Gpio net: GPIO
Pwm net: PWM
Module {
    name: "<root>",
    source: "test.zen",
}
[]
